[reafactor]: move grammar for jdk 16